--- a/src/_sass/imports/minimal-mistakes/_sidebar.scss
+++ b/src/_sass/imports/minimal-mistakes/_sidebar.scss
@@ -65,6 +65,7 @@
 
         a {
             display: flex;
+            align-items:  center;
             border-radius: 4px;
             padding: 8px 4px 8px 8px;
           
