--- a/src/_sass/imports/minimal-mistakes/_variables.scss
+++ b/src/_sass/imports/minimal-mistakes/_variables.scss
@@ -99,8 +99,8 @@ $navicon-link-color-hover: mix(#fff, $primary-color, 75%) !default;
 $small: 768px !default;
 $medium: 992px !default;
 // $medium-wide: 900px !default;
-$large: 1200px !default;
-// $x-large: 1440px !default;
+$large: 1024px !default;
+$x-large: 1200px !default;
 $max-width: $large !default;
 
 /*
